--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,101 @@
         </div>
     </section>
     <section class="products">
-        
+        <div class="container flex flex-col items-center gap-5">
+            <div class="products-title">
+                <h2 class="text-4xl font-medium">Balık Gruplarımız</h2>
+                <hr class="my-2 border-t-2 border-2 border-[var(--fish-red)] w-1/2 mx-auto">
+            </div>
+            <div class="products-navbar">
+                <ul id="products-navbar-list">
+                    <li class="active"><a href="">Klasik</a></li>
+                    <li><a href="">Retail</a></li>
+                    <li><a href="">Marinat</a></li>
+                    <li><a href="">Skinpack</a></li>
+                    <li><a href="">Gurme</a></li>
+                    <li><a href="">Füme</a></li>
+                    <li><a href="">Hamurlular</a></li>
+                    <li><a href="">Tümünü Göster</a></li>
+                </ul>
+            </div>
+            <div class="products-area">
+                <div class="products-box">
+                    <div class="products-card">
+                        <div class="image-area">
+                            <img src="assets/yemek1.webp" alt="">
+                        </div>
+                        <div class="title-area">
+                            <div class="flex justify-between items-center">
+                                <span>Balık Köftesi</span>
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
+                            <span class="text-xs font-extralight">200gr, 4 adet</span>
+                            <span class="my-3">300 TL</span>
+                            <div class="flex justify-between items-center text-xs font-extralight">
+                                <span>1200 TL / Paket</span>
+                                <span>Koli İçi Adet: 20</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="products-box">
+                    <div class="products-card">
+                        <div class="image-area">
+                            <img src="assets/yemek2.webp" alt="">
+                        </div>
+                        <div class="title-area"></div>
+                    </div>
+                </div>
+                <div class="products-box">
+                    <div class="products-card">
+                        <div class="image-area">
+                            <img src="assets/yemek3.webp" alt="">
+                        </div>
+                        <div class="title-area"></div>
+                    </div>
+                </div>
+                <div class="products-box">
+                    <div class="products-card">
+                        <div class="image-area">
+                            <img src="assets/yemek3.webp" alt="">
+                        </div>
+                        <div class="title-area"></div>
+                    </div>
+                </div>
+                <div class="products-box">
+                    <div class="products-card">
+                        <div class="image-area">
+                            <img src="assets/yemek1.webp" alt="">
+                        </div>
+                        <div class="title-area"></div>
+                    </div>
+                </div>
+                <div class="products-box">
+                    <div class="products-card">
+                        <div class="image-area">
+                            <img src="assets/yemek2.webp" alt="">
+                        </div>
+                        <div class="title-area"></div>
+                    </div>
+                </div>
+                <div class="products-box">
+                    <div class="products-card">
+                        <div class="image-area">
+                            <img src="assets/yemek3.webp" alt="">
+                        </div>
+                        <div class="title-area"></div>
+                    </div>
+                </div>
+                <div class="products-box">
+                    <div class="products-card">
+                        <div class="image-area">
+                            <img src="assets/yemek3.webp" alt="">
+                        </div>
+                        <div class="title-area"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <script src="script.js"></script>
 </body>
