--- a/src/index.html
+++ b/src/index.html
@@ -184,11 +184,19 @@
                 </ul>
             </div>
             <div class="products-area flex flex-wrap w-full">
-                <div class="products-box">
+                <div class="products-box group">
                     <div class="products-card">
-                        <div class="image-area">
-                            <span>Glütensz</span>
+                        <div class="image-area relative">
+                            <span class="guluten-free"></span>
                             <img src="assets/yemek1.webp" alt="">
+                            <div class="fast-buttons">
+                                <button>
+                                    <i class="fa-regular fa-eye text-lg"></i>
+                                </button>
+                                <button>
+                                    <i class="fa-brands fa-opencart text-lg"></i>
+                                </button>
+                            </div>
                         </div>
                         <div class="title-area">
                             <div class="flex justify-between items-center">
@@ -204,60 +212,88 @@
                         </div>
                     </div>
                 </div>
-                <div class="products-box">
+                <div class="products-box group">
                     <div class="products-card">
-                        <div class="image-area">
+                        <div class="image-area relative">
+                            <span class="nothing"></span>
                             <img src="assets/yemek2.webp" alt="">
+                            <div class="fast-buttons">
+                                <button>
+                                    <i class="fa-regular fa-eye text-lg"></i>
+                                </button>
+                                <button>
+                                    <i class="fa-brands fa-opencart text-lg"></i>
+                                </button>
+                            </div>
                         </div>
-                        <div class="title-area"></div>
+                        <div class="title-area">
+                            <div class="flex justify-between items-center">
+                                <span>Balık Köftesi</span>
+                                <i class="fa-regular fa-heart favorite-icon cursor-pointer"></i>
+                            </div>
+                            <span class="text-xs font-extralight">200gr, 4 adet</span>
+                            <span class="my-5 font-medium">300 TL</span>
+                            <div class="flex justify-between items-center text-xs font-extralight">
+                                <span>1200 TL / Paket</span>
+                                <span>Koli İçi Adet: 20</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="products-box">
+                <div class="products-box group">
                     <div class="products-card">
-                        <div class="image-area">
+                        <div class="image-area relative">
+                            <span class="offsale"></span>
                             <img src="assets/yemek3.webp" alt="">
+                            <div class="fast-buttons">
+                                <button>
+                                    <i class="fa-regular fa-eye text-lg"></i>
+                                </button>
+                                <button>
+                                    <i class="fa-brands fa-opencart text-lg"></i>
+                                </button>
+                            </div>
                         </div>
-                        <div class="title-area"></div>
+                        <div class="title-area">
+                            <div class="flex justify-between items-center">
+                                <span>Balık Köftesi</span>
+                                <i class="fa-regular fa-heart favorite-icon cursor-pointer"></i>
+                            </div>
+                            <span class="text-xs font-extralight">200gr, 4 adet</span>
+                            <span class="my-5 font-medium">300 TL</span>
+                            <div class="flex justify-between items-center text-xs font-extralight">
+                                <span>1200 TL / Paket</span>
+                                <span>Koli İçi Adet: 20</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="products-box">
+                <div class="products-box group">
                     <div class="products-card">
-                        <div class="image-area">
+                        <div class="image-area relative">
+                            <span class="offsale"></span>
                             <img src="assets/yemek3.webp" alt="">
+                            <div class="fast-buttons">
+                                <button>
+                                    <i class="fa-regular fa-eye text-lg"></i>
+                                </button>
+                                <button>
+                                    <i class="fa-brands fa-opencart text-lg"></i>
+                                </button>
+                            </div>
                         </div>
-                        <div class="title-area"></div>
-                    </div>
-                </div>
-                <div class="products-box">
-                    <div class="products-card">
-                        <div class="image-area">
-                            <img src="assets/yemek1.webp" alt="">
+                        <div class="title-area">
+                            <div class="flex justify-between items-center">
+                                <span>Balık Köftesi</span>
+                                <i class="fa-regular fa-heart favorite-icon cursor-pointer"></i>
+                            </div>
+                            <span class="text-xs font-extralight">200gr, 4 adet</span>
+                            <span class="my-5 font-medium">300 TL</span>
+                            <div class="flex justify-between items-center text-xs font-extralight">
+                                <span>1200 TL / Paket</span>
+                                <span>Koli İçi Adet: 20</span>
+                            </div>
                         </div>
-                        <div class="title-area"></div>
-                    </div>
-                </div>
-                <div class="products-box">
-                    <div class="products-card">
-                        <div class="image-area">
-                            <img src="assets/yemek2.webp" alt="">
-                        </div>
-                        <div class="title-area"></div>
-                    </div>
-                </div>
-                <div class="products-box">
-                    <div class="products-card">
-                        <div class="image-area">
-                            <img src="assets/yemek3.webp" alt="">
-                        </div>
-                        <div class="title-area"></div>
-                    </div>
-                </div>
-                <div class="products-box">
-                    <div class="products-card">
-                        <div class="image-area">
-                            <img src="assets/yemek3.webp" alt="">
-                        </div>
-                        <div class="title-area"></div>
                     </div>
                 </div>
             </div>
