--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
         </div>
     </section>
     <section class="features flex justify-center">
-        <div class="container flex justify-between py-15">
+        <div class="container flex justify-between py-10">
            <div class="feature-box">
                 <div class="feature-cycle border-[var(--fish-red)]">
                     <img src="assets/balik.jpg" alt="">
@@ -166,7 +166,7 @@
         </div>
     </section>
     <section class="products flex justify-center">
-        <div class="container flex flex-col items-center gap-5">
+        <div class="container flex flex-col items-center gap-5 py-10">
             <div class="products-title">
                 <h2 class="text-4xl font-medium">Balık Gruplarımız</h2>
                 <hr class="my-2 border-t-2 border-2 border-[var(--fish-red)] w-1/2 mx-auto">
@@ -193,7 +193,7 @@
                                 <button>
                                     <i class="fa-regular fa-eye text-lg"></i>
                                 </button>
-                                <button>
+                                <button class="opencart-btn">
                                     <i class="fa-brands fa-opencart text-lg"></i>
                                 </button>
                             </div>
@@ -221,7 +221,7 @@
                                 <button>
                                     <i class="fa-regular fa-eye text-lg"></i>
                                 </button>
-                                <button>
+                                <button class="opencart-btn">
                                     <i class="fa-brands fa-opencart text-lg"></i>
                                 </button>
                             </div>
@@ -249,7 +249,101 @@
                                 <button>
                                     <i class="fa-regular fa-eye text-lg"></i>
                                 </button>
+                                <button class="opencart-btn">
+                                    <i class="fa-brands fa-opencart text-lg"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="title-area">
+                            <div class="flex justify-between items-center">
+                                <span>Balık Köftesi</span>
+                                <i class="fa-regular fa-heart favorite-icon cursor-pointer"></i>
+                            </div>
+                            <span class="text-xs font-extralight">200gr, 4 adet</span>
+                            <div class="offsale my-5 flex items-center">
+                                <i class="fa-solid fa-caret-down text-[var(--fish-red)] text-4xl"></i>
+                                <span class="ml-1">%25</span>
+                                <span class="line-through opacity-60 ml-2">500 TL</span>
+                                <span class="font-medium text-[var(--fish-red)] ml-2">376 TL</span>
+                            </div>
+                            <div class="flex justify-between items-center text-xs font-extralight">
+                                <span>1200 TL / Paket</span>
+                                <span>Koli İçi Adet: 20</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="products-box group">
+                    <div class="products-card">
+                        <div class="image-area relative">
+                            <span class="offsale"></span>
+                            <img src="assets/yemek3.webp" alt="">
+                            <div class="fast-buttons">
                                 <button>
+                                    <i class="fa-regular fa-eye text-lg"></i>
+                                </button>
+                                <button class="opencart-btn">
+                                    <i class="fa-brands fa-opencart text-lg"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="title-area">
+                            <div class="flex justify-between items-center">
+                                <span>Balık Köftesi</span>
+                                <i class="fa-regular fa-heart favorite-icon cursor-pointer"></i>
+                            </div>
+                            <span class="text-xs font-extralight">200gr, 4 adet</span>
+                            <div class="offsale my-5 flex items-center">
+                                <i class="fa-solid fa-caret-down text-[var(--fish-red)] text-4xl"></i>
+                                <span class="ml-1">%25</span>
+                                <span class="line-through opacity-60 ml-2">500 TL</span>
+                                <span class="font-medium text-[var(--fish-red)] ml-2">376 TL</span>
+                            </div>
+                            <div class="flex justify-between items-center text-xs font-extralight">
+                                <span>1200 TL / Paket</span>
+                                <span>Koli İçi Adet: 20</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="products-box group">
+                    <div class="products-card">
+                        <div class="image-area relative">
+                            <span class="guluten-free"></span>
+                            <img src="assets/yemek1.webp" alt="">
+                            <div class="fast-buttons">
+                                <button>
+                                    <i class="fa-regular fa-eye text-lg"></i>
+                                </button>
+                                <button class="opencart-btn">
+                                    <i class="fa-brands fa-opencart text-lg"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="title-area">
+                            <div class="flex justify-between items-center">
+                                <span>Balık Köftesi</span>
+                                <i class="fa-regular fa-heart favorite-icon cursor-pointer"></i>
+                            </div>
+                            <span class="text-xs font-extralight">200gr, 4 adet</span>
+                            <span class="my-5 font-medium">300 TL</span>
+                            <div class="flex justify-between items-center text-xs font-extralight">
+                                <span>1200 TL / Paket</span>
+                                <span>Koli İçi Adet: 20</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="products-box group">
+                    <div class="products-card">
+                        <div class="image-area relative">
+                            <span class="nothing"></span>
+                            <img src="assets/yemek2.webp" alt="">
+                            <div class="fast-buttons">
+                                <button>
+                                    <i class="fa-regular fa-eye text-lg"></i>
+                                </button>
+                                <button class="opencart-btn">
                                     <i class="fa-brands fa-opencart text-lg"></i>
                                 </button>
                             </div>
@@ -277,7 +371,7 @@
                                 <button>
                                     <i class="fa-regular fa-eye text-lg"></i>
                                 </button>
-                                <button>
+                                <button class="opencart-btn">
                                     <i class="fa-brands fa-opencart text-lg"></i>
                                 </button>
                             </div>
@@ -288,13 +382,71 @@
                                 <i class="fa-regular fa-heart favorite-icon cursor-pointer"></i>
                             </div>
                             <span class="text-xs font-extralight">200gr, 4 adet</span>
-                            <span class="my-5 font-medium">300 TL</span>
+                            <div class="offsale my-5 flex items-center">
+                                <i class="fa-solid fa-caret-down text-[var(--fish-red)] text-4xl"></i>
+                                <span class="ml-1">%25</span>
+                                <span class="line-through opacity-60 ml-2">500 TL</span>
+                                <span class="font-medium text-[var(--fish-red)] ml-2">376 TL</span>
+                            </div>
                             <div class="flex justify-between items-center text-xs font-extralight">
                                 <span>1200 TL / Paket</span>
                                 <span>Koli İçi Adet: 20</span>
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="products-box group">
+                    <div class="products-card">
+                        <div class="image-area relative">
+                            <span class="offsale"></span>
+                            <img src="assets/yemek3.webp" alt="">
+                            <div class="fast-buttons">
+                                <button>
+                                    <i class="fa-regular fa-eye text-lg"></i>
+                                </button>
+                                <button class="opencart-btn">
+                                    <i class="fa-brands fa-opencart text-lg"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="title-area">
+                            <div class="flex justify-between items-center">
+                                <span>Balık Köftesi</span>
+                                <i class="fa-regular fa-heart favorite-icon cursor-pointer"></i>
+                            </div>
+                            <span class="text-xs font-extralight">200gr, 4 adet</span>
+                            <div class="offsale my-5 flex items-center">
+                                <i class="fa-solid fa-caret-down text-[var(--fish-red)] text-4xl"></i>
+                                <span class="ml-1">%25</span>
+                                <span class="line-through opacity-60 ml-2">500 TL</span>
+                                <span class="font-medium text-[var(--fish-red)] ml-2">376 TL</span>
+                            </div>
+                            <div class="flex justify-between items-center text-xs font-extralight">
+                                <span>1200 TL / Paket</span>
+                                <span>Koli İçi Adet: 20</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="whyus flex justify-center items-center flex-col">
+        <div class="container flex flex-col items-center gap-5 py-10">
+            <div class="whyus-title flex flex-col items-center gap-2">
+                <h5 class="text-xl font-medium text-[var(--fish-blue)]">The Fish Company</h5>
+                <h2 class="text-4xl font-medium">Ürünlerimizi Neden Seçmelisiniz?</h2>
+            </div>
+        </div>
+        <div class="whyus-container flex justify-center items-center">
+                <div class="container flex justify-between items-center h-full">
+                    <article class="w-1/3 h-full"></article>
+                    <article class="w-1/3 h-full">
+                        <figure class="overflow-hidden w-full h-full">
+                            <img src="assets/chef.webp" alt="">
+                        </figure>
+                    </article>
+                    <article class="w-1/3 h-full"></article>
                 </div>
             </div>
         </div>
