--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
             </div>
         </div>
     </nav>
-    <section class="hero flex justify-center">
+    <section class="hero flex justify-center relative">
         <div class="container flex justify-between items-center relative">
             <div class="hero-title w-5/12 flex flex-col gap-4">
                 <h1 class="text-5xl font-extrabold leading-15">Gurme Serisi Pesto Soslu Dil Balığı Dolmasını Denediniz mi ?</h1>
@@ -440,13 +440,45 @@
         </div>
         <div class="whyus-container flex justify-center items-center">
                 <div class="container flex justify-between items-center h-full">
-                    <article class="w-1/3 h-full"></article>
+                    <article class="w-1/3 h-full flex flex-col gap-20 justify-center items-center text-white">
+                        <div class="article-content flex items-center gap-5">
+                            <div class="content-title flex flex-col gap-2 text-end">
+                                <h3 class="text-2xl">Tazeden Daha Taze</h3>
+                                <p class="text-xl font-light">Balıklarımız tutulduktan sadece 17 dk sonra dondurup paketleniyor.</p>
+                            </div>
+                            <div class="content-img bg-white p-4 rounded-full">
+                                <img class="w-20" src="assets/img6.png" alt="">
+                            </div>
+                        </div>
+                        <div class="article-content flex items-center gap-5 text-end">
+                            <div class="content-title flex flex-col gap-2">
+                                <h3 class="text-2xl">Zengin Ürün Çeşidi</h3>
+                                <p class="text-xl font-light">Dünyanın bir çok bölgesinden getirdiğimiz farklı balık türleri sizinle buluşuyor.</p>
+                            </div>
+                            <div class="content-img bg-white p-4 rounded-full">
+                                <img class="w-20" src="assets/img6.png" alt="">
+                            </div>
+                        </div>
+                        <div class="article-content flex items-center gap-5 text-end">
+                            <div class="content-title flex flex-col gap-2">
+                                <h3 class="text-2xl">QR Destekli İzlenebilirlik</h3>
+                                <p class="text-xl font-light">Ürünlerimizin QR kodunu okutarak tutulduğu andan itibaren tüm süreci izleyebilirsiniz.</p>
+                            </div>
+                            <div class="content-img bg-white p-4 rounded-full">
+                                <img class="w-20" src="assets/img6.png" alt="">
+                            </div>
+                        </div>
+                    </article>
                     <article class="w-1/3 h-full">
                         <figure class="overflow-hidden w-full h-full">
                             <img src="assets/chef.webp" alt="">
                         </figure>
                     </article>
-                    <article class="w-1/3 h-full"></article>
+                    <article class="w-1/3 h-full">
+                        <div class="article-content"></div>
+                        <div class="article-content"></div>
+                        <div class="article-content"></div>
+                    </article>
                 </div>
             </div>
         </div>
