--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!------------------------------------Links/Components------------------------------------>
     <title>Fish.com</title>
-    <!---------------------------------------Components/--------------------------------------->
+    <!---------------------------------------Components/-------------------------------------->
 </head>
 <body>
     <div class="topbar flex justify-center text-white font-light tracking-wider text-sm">
@@ -27,7 +27,7 @@
             <div class="information-area flex items-center">
                 <span>3000TL ve üzeri siparişlerde kargo ücretsiz!</span>
             </div>
-            <div class="social-area text-2xl flex items-center gap-5">
+            <div class="social-area text-2xl ">
                 <a href=""><i class="fa-brands fa-instagram"></i></a>
                 <a href=""><i class="fa-brands fa-facebook"></i></a>
                 <a href=""><i class="fa-brands fa-whatsapp"></i></a>
@@ -433,39 +433,39 @@
     </section>
     <section class="whyus flex justify-center items-center flex-col">
         <div class="container flex flex-col items-center gap-5 py-10">
-            <div class="whyus-title flex flex-col items-center gap-2">
+            <div class="whyus-title">
                 <h5 class="text-xl font-medium text-[var(--fish-blue)]">The Fish Company</h5>
                 <h2 class="text-4xl font-medium">Ürünlerimizi Neden Seçmelisiniz?</h2>
             </div>
         </div>
         <div class="whyus-container flex justify-center items-center">
                 <div class="container flex justify-between items-center h-full">
-                    <article class="w-1/3 h-full flex flex-col gap-20 justify-center items-center text-white">
-                        <div class="article-content flex items-center gap-5">
-                            <div class="content-title flex flex-col gap-2 text-end">
-                                <h3 class="text-2xl">Tazeden Daha Taze</h3>
-                                <p class="text-xl font-light">Balıklarımız tutulduktan sadece 17 dk sonra dondurup paketleniyor.</p>
+                    <article>
+                        <div class="article-content">
+                            <div class="content-title">
+                                <h3>Tazeden Daha Taze</h3>
+                                <p>Balıklarımız tutulduktan sadece 17 dk sonra dondurup paketleniyor.</p>
                             </div>
-                            <div class="content-img bg-white p-4 rounded-full">
-                                <img class="w-20" src="assets/img6.png" alt="">
+                            <div class="content-img">
+                                <img class="absolute w-12" src="assets/img1.png" alt="">
                             </div>
                         </div>
-                        <div class="article-content flex items-center gap-5 text-end">
-                            <div class="content-title flex flex-col gap-2">
-                                <h3 class="text-2xl">Zengin Ürün Çeşidi</h3>
+                        <div class="article-content ">
+                            <div class="content-title">
+                                <h3>Zengin Ürün Çeşidi</h3>
                                 <p class="text-xl font-light">Dünyanın bir çok bölgesinden getirdiğimiz farklı balık türleri sizinle buluşuyor.</p>
                             </div>
-                            <div class="content-img bg-white p-4 rounded-full">
-                                <img class="w-20" src="assets/img6.png" alt="">
+                            <div class="content-img">
+                                <img class="absolute w-12" src="assets/img2.png" alt="">
                             </div>
                         </div>
-                        <div class="article-content flex items-center gap-5 text-end">
-                            <div class="content-title flex flex-col gap-2">
-                                <h3 class="text-2xl">QR Destekli İzlenebilirlik</h3>
+                        <div class="article-content ">
+                            <div class="content-title">
+                                <h3>QR Destekli İzlenebilirlik</h3>
                                 <p class="text-xl font-light">Ürünlerimizin QR kodunu okutarak tutulduğu andan itibaren tüm süreci izleyebilirsiniz.</p>
                             </div>
-                            <div class="content-img bg-white p-4 rounded-full">
-                                <img class="w-20" src="assets/img6.png" alt="">
+                            <div class="content-img">
+                                <img class="absolute w-12" src="assets/img5.png" alt="">
                             </div>
                         </div>
                     </article>
@@ -474,10 +474,34 @@
                             <img src="assets/chef.webp" alt="">
                         </figure>
                     </article>
-                    <article class="w-1/3 h-full">
-                        <div class="article-content"></div>
-                        <div class="article-content"></div>
-                        <div class="article-content"></div>
+                    <article>
+                        <div class="article-content  !text-start">
+                            <div class="content-img">
+                                <img class="absolute w-12" src="assets/img4.png" alt="">
+                            </div>
+                            <div class="content-title ">
+                                <h3>Yüksek Kalite / Uygun Fİyat</h3>
+                                <p class="text-xl font-light">Onlarca taze balık türünü en uygun fiyatlarla sizlerle buluşturuyoruz.</p>
+                            </div>
+                        </div>
+                        <div class="article-content  !text-start">
+                            <div class="content-img">
+                                <img class="absolute w-12" src="assets/img6.png" alt="">
+                            </div>
+                            <div class="content-title">
+                                <h3>-18 C‘de Soğuk Zincir</h3>
+                                <p class="text-xl font-light">Tüm ürünlerimiz -18 C’de muhafaza edilerek soğuk zincir araçlarımızla sizinle buluşuyor.</p>
+                            </div>
+                        </div>
+                        <div class="article-content  !text-start">
+                            <div class="content-img">
+                                <img class="absolute w-12" src="assets/img3.png" alt="">
+                            </div>
+                            <div class="content-title">
+                                <h3>1 Günde Teslimat Garantisi</h3>
+                                <p class="text-xl font-light">Ürünlerimizi sipariş verdikten 1 gün sonra firmanıza teslim ediyoruz.</p>
+                            </div>
+                        </div>
                     </article>
                 </div>
             </div>
