--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
             <div class="information-area flex items-center">
                 <span>3000TL ve üzeri siparişlerde kargo ücretsiz!</span>
             </div>
-            <div class="social-area text-2xl ">
+            <div class="social-area text-2xl flex items-center gap-3">
                 <a href=""><i class="fa-brands fa-instagram"></i></a>
                 <a href=""><i class="fa-brands fa-facebook"></i></a>
                 <a href=""><i class="fa-brands fa-whatsapp"></i></a>
@@ -643,7 +643,69 @@
             </div>
         </div>
     </section>
-    
+    <section class="special-recipes flex justify-center">
+        <div class="container flex items-center justify-between py-20 px-5">
+            <div class="special-title flex flex-col gap-2 w-2/5 pr-20 pt-20">
+                <figure>
+                    <img class="h-15 -scale-x-100 rotate-10" src="assets/cap.png" alt="">
+                </figure>
+                <div class="flex items-center gap-2">
+                    <h3 class="text-xl text-[var(--fish-red)]">The Fish Company</h3>
+                    <img class="h-1.5" src="assets/tail.png" alt="">
+                </div>
+                <h2 class="text-4xl">ŞEFLER İÇİN ÖZEL TARİFLER</h2>
+                <span class="biro text-3xl pt-10">Farklı tarifler, farklı tatlar...</span>
+                <p class="text-xl font-extralight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ac iaculis ex. Suspendisse lacinia nibh sed metus dictum pellentesque. Mauris ut sem ut elit tristique maximus. Nunc in tortor nulla. Etiam tortor risus, pellentesque vitae pharetra.</p>
+                <a href="" class="fish-button size-fit my-10">
+                    <div class="fish-image w-35 relative inline-block">
+                        <img src="assets/fishble.png" alt="">
+                        <span class="absolute inset-0 flex items-center justify-end text-lg font-extrabold text-white pr-5 pt-1">
+                            Satın Al
+                        </span>
+                    </div>
+                </a>
+            </div>
+            <div class="recipes w-3/5 h-full flex flex-wrap justify-end items-end text-white">
+                <div class="recipe-box">
+                    <div class="recipe-card">
+                        <img src="assets/yemek8.webp" alt="Yemek" class="recipe-bg-img" />
+                        <div class="ribbon">YENİ</div>
+                        <div class="card-title">
+                            <h5>18.02.2025</h5>
+                            <h3 class="text-2xl z-50">Lorem ipsum dolor →</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="recipe-box">
+                    <div class="recipe-card">
+                        <img src="assets/yemek9.webp" alt="Yemek" class="recipe-bg-img" />
+                        <div class="card-title">
+                            <h5>18.02.2025</h5>
+                            <h3 class="text-2xl z-50">Lorem ipsum dolor →</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="recipe-box">
+                    <div class="recipe-card">
+                        <img src="assets/yemek9.webp" alt="Yemek" class="recipe-bg-img" />
+                        <div class="card-title">
+                            <h5>18.02.2025</h5>
+                            <h3 class="text-2xl z-50">Lorem ipsum dolor →</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="recipe-box">
+                    <div class="recipe-card">
+                        <img src="assets/yemek10.webp" alt="Yemek" class="recipe-bg-img" />
+                        <div class="card-title">
+                            <h5>18.02.2025</h5>
+                            <h3 class="text-2xl z-50">Lorem ipsum dolor →</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
