--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
                 <a href="" class="fish-button size-fit mt-5">
                     <div class="fish-image w-35 relative inline-block">
                         <img src="assets/fishble.png" alt="">
-                        <span class="absolute inset-0 flex items-center justify-end text-lg font-extrabold text-white pr-5 pt-1">
+                        <span class="absolute inset-0 flex items-center justify-end text-lg font-normal text-white pr-6 pt-1">
                             Satın Al
                         </span>
                     </div>
@@ -659,8 +659,8 @@
                 <a href="" class="fish-button size-fit my-10">
                     <div class="fish-image w-35 relative inline-block">
                         <img src="assets/fishble.png" alt="">
-                        <span class="absolute inset-0 flex items-center justify-end text-lg font-extrabold text-white pr-5 pt-1">
-                            Satın Al
+                        <span class="absolute inset-0 flex items-center justify-end text-lg font-normal text-white pr-8 pt-1">
+                            İncele
                         </span>
                     </div>
                 </a>
@@ -668,39 +668,64 @@
             <div class="recipes w-3/5 h-full flex flex-wrap justify-end items-end text-white">
                 <div class="recipe-box">
                     <div class="recipe-card">
-                        <img src="assets/yemek8.webp" alt="Yemek" class="recipe-bg-img" />
+                        <div class="over">
+                            <img src="assets/yemek8.webp" alt="Yemek" class="recipe-bg-img" />
+                        </div>
                         <div class="ribbon">YENİ</div>
-                        <div class="card-title">
+                        <a href="" class="card-title">
                             <h5>18.02.2025</h5>
                             <h3 class="text-2xl z-50">Lorem ipsum dolor →</h3>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="recipe-box">
                     <div class="recipe-card">
-                        <img src="assets/yemek9.webp" alt="Yemek" class="recipe-bg-img" />
-                        <div class="card-title">
+                        <div class="over">
+                            <img src="assets/yemek9.webp" alt="Yemek" class="recipe-bg-img"/>
+                        </div>
+                        <a href="" class="play-btn-text cursor-pointer">
+                            <div class="play-circle-text" aria-hidden="true">
+                                <svg viewBox="0 0 120 120" width="80" height="80" class="circle-svg">
+                                    <defs>
+                                        <!-- Small offset hack so the path is a full circle -->
+                                        <path id="recipeCirclePath" d="M60,15 a45,45 0 1,1 -0.1,0" />
+                                    </defs>
+                                    <text>
+                                        <textPath href="#recipeCirclePath" startOffset="0%" >
+                                            PLAY VİDEO • PLAY VİDEO • PLAY VİDEO •
+                                        </textPath>
+                                    </text>
+                                </svg>
+                            </div>
+                            <div class="play-btn" role="button" aria-label="Oynat">▶</div>
+                        </a>
+                        <a href="" class="card-title">
                             <h5>18.02.2025</h5>
                             <h3 class="text-2xl z-50">Lorem ipsum dolor →</h3>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="recipe-box">
                     <div class="recipe-card">
-                        <img src="assets/yemek9.webp" alt="Yemek" class="recipe-bg-img" />
-                        <div class="card-title">
+                        <div class="over">
+                            <img src="assets/yemek9.webp" alt="Yemek" class="recipe-bg-img" />
+                        </div>
+                        <a href="" class="card-title">
                             <h5>18.02.2025</h5>
                             <h3 class="text-2xl z-50">Lorem ipsum dolor →</h3>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="recipe-box">
                     <div class="recipe-card">
-                        <img src="assets/yemek10.webp" alt="Yemek" class="recipe-bg-img" />
-                        <div class="card-title">
+                        <div class="over">
+                            <img src="assets/yemek10.webp" alt="Yemek" class="recipe-bg-img" />
+                        </div>
+                        
+                        <a href="" class="card-title">
                             <h5>18.02.2025</h5>
                             <h3 class="text-2xl z-50">Lorem ipsum dolor →</h3>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
